src/test/deca/context/valid/sansObjet/unaruExprNot.deca
// Description:
//   Test d'unary Expr
//
// Resultats:
//
//
// Historique:
//    cree le 13/01/2020

{
      boolean y = true;
      boolean x = ! y;

}
