src/test/deca/context/invalid/class/16_this.deca
/* Description:
    test invalide en utilisant this ( rien ne correspond à this)


    Historique:
      cree le 18/01/2020
*/

   {
    this.x;

   }
